[tool.poetry]
name = "my-hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["trungnghiahoang96"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/trungnghiahoang96/my-hypermodern-python"
repository = "https://github.com/trungnghiahoang96/my-hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.3.1"}
pytest-cov = "^2.10.1"


[tool.poetry.scripts]
my-hypermodern-python = "my_hypermodern_python.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# pyproject.toml
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["my_hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100
